objects/Contact_Document_Request__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Document Requests</relationshipLabel>
        <relationshipName>Contact_Document_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Document_Name_Uploaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The document that was uploaded to attachments.  Use this to verify that the filename exists in attachments.</inlineHelpText>
        <label>Document Name Uploaded</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The document type requested</inlineHelpText>
        <label>Document Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Upload_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the document has been provided via other means (email, text etc), please check this field to disable the request in external applications.</inlineHelpText>
        <label>Upload Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Document Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Document Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Document Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>